# Study_project

./: .dockerignore  Dockerfile  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 55e977f17626_create_initial_tables.py  691fbc0a0a62_initial.py  8c687dc641a6_added_relationship_for_user.py  db39f38c6268_fix_uuid_types.py
src/: application.py  config.py  db.py
src/Items/: models.py
src/customer_orders/: router.py  schemas.py  services.py
src/healthcheck/: __init__.py  router.py
src/models/: __init__.py  base.py  customer.py  items.py  orders.py  orders_items.py  user.py  user_profile.py  users.py
src/orders/: models.py
src/orders_items/: router.py  schemas.py  services.py
src/schemas/: base_schemas.py  composite_schemas.py
src/users/: __init__.py  models.py  router.py  schemas.py  services.py
