[project]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = [
    {name = "Rudislam"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic (>=1.17.0,<2.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "ujson (>=5.11.0,<6.0.0)",
    "pydantic (>=2.12.3,<3.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "fastapi (>=0.119.1,<0.120.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
